--- a/url_shortener/templates/index.html
+++ b/url_shortener/templates/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
+    
+<div class ="heading" style="margin-top: 50px;">
+    <h1>   Welcome to URL Shortener </h1>
+        </div> 
     <div class="container">
         <h1>URL Shortener</h1>
         <form action="{% url 'shorten_url' %}" method="POST">
