--- a/url_shortener/static/styles.css
+++ b/url_shortener/static/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
+    /* margin: 0; */
+    /* padding: 0; */
     /* background-color: #f9f9f9; */
     background-color: rgba(255, 255, 255, 0.8);
     background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?cs=srgb&dl=pexels-pixabay-531880.jpg&fm=jpg');
@@ -16,7 +16,7 @@ body {
     /* max-width: max-content; */
     /* padding: 1px; */
     font-size: xx-large;
-    background-color: rgba(67, 90, 133, 0.153);
+    /* background-color: rgba(67, 90, 133, 0.153); */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Background color with transparency */
 }
 
